tests/snapshots/formatter__it_echos_line_comments-2.snap
---
source: tests/formatter.rs
expression: formatted_text
---
let a = [true, 12, 34, 
// line comment
1253, "asdf", 
// wow
]
