tests/snapshots/formatter__it_echos_line_comments.snap
---
source: tests/formatter.rs
expression: formatter.into_output()
---
set BASE_URL env("hi")

// let t = {
//   value: 23,
//   love: "you",
//   hello: {
//     world: true, test: {
//       ing: "true", wow: { b: 122 }
//     }
//   }
// }

post `${env("b_url")}/asdf` {
  header "Content-Type" "application/json"
  // This a line comment
  // And this is another
  body m
}

// let l 
// = t
//
//         let l = [null, t]
