tests/snapshots/formatter__it_formats_json_object.snap
---
source: tests/formatter.rs
expression: formatted_text
---
let o = {
  get: "value",
  post: 123,
  put: {
    author: "Me"
  },
  patch: true,
  delete: false,
  set: "true",
  let: view,
  null: null,
  header: "",
  body: ""
}
