tests/snapshots/formatter__it_formats_object_literals_with_line_comments.snap
---
source: tests/formatter.rs
expression: formatted_text
---
let o = {
  key: "value",
  // akey: 123,
  love: ["asdf", 
  // asdf,
  12]
}
