tests/snapshots/formatter__it_formats_template_strings-2.snap
---
source: tests/formatter.rs
expression: formatted_text
---
get `http://localhost:8080/api?sort=${sort}&filter=${filter}`

// line comment
