tests/snapshots/formatter__it_formats_template_strings.snap
---
source: tests/formatter.rs
expression: formatter.into_output()
---
set BASE_URL base

let hey = `asdf ${`${`${"adsfasdf"}`}asdfa`} asdfasdf ${base} asdf`
let port = "3000"
