tests/snapshots/formatter__it_works-3.snap
---
source: tests/formatter.rs
expression: formatter.into_output()
---
//let base = env("base")

set BASE_URL base
